--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "nextSass",
   "version": "0.1",
   "private": true,
-  "description": "Elegant Sass utility library, fully customizable.",
+  "description": "Elegant and fully customizable Sass utility library.",
   "keywords": [
     "Sass",
     "CSS",
@@ -17,6 +17,6 @@
   "homepage": "http://ilton.me/nextsass",
   "repository": {
     "type": "git",
-    "url": "https://github.com/iltonjr/next3.git"
+    "url": "https://github.com/iltonjr/nextsass.git"
   }
 }
