--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,40 @@
-/.sass-cache
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
+/bin
+/tmp
+
+# dependencies
+/node_modules
+
+# IDEs and editors
 /.idea
-config.rb
-.idea/workspace.xml
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+/sassdoc
+npm-debug.log
+yarn.lock
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
