--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "nextsass",
-  "title": "nextSass",
-  "version": "0.1",
-  "private": true,
-  "description": "Elegant and fully customizable Sass utility library.",
+  "version": "1.0.0",
+  "description": "nextSass is a complete Sass library, aimed in customization, lightweight and code agility.",
+  "main": "index.js",
+  "scripts": {
+    "build-task:scss-compile": "node-sass-chokidar --source-map true src/ -o bin",
+    "build-task:autoprefixer": "postcss bin/*.css --use autoprefixer -d bin",
+    "sass:build": "npm-run-all -p build-task:*",
+    "sass:watch": "chokidar 'src/**/*.scss' -c 'npm run sass:build'",
+    "dev": "npm-run-all -p sass:*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iltonjr/nextsass.git"
+  },
   "keywords": [
     "Sass",
     "CSS",
@@ -11,12 +21,17 @@
     "Next",
     "nextSass"
   ],
-  "main": "src/nextsass.scss",
   "author": "Ilton Alberto Junior",
   "license": "MPL-2.0",
-  "homepage": "http://ilton.me/nextsass",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/iltonjr/nextsass.git"
+  "bugs": {
+    "url": "https://github.com/iltonjr/nextsass/issues"
+  },
+  "homepage": "https://github.com/iltonjr/nextsass#readme",
+  "dependencies": {
+    "autoprefixer": "^9.3.1",
+    "chokidar-cli": "^1.2.1",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.3",
+    "postcss-cli": "^6.0.1"
   }
 }
