--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,9 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine on
+    RewriteEngine On
+    RewriteBase /nextsass/
 
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME) !-d
-    RewriteCond %{REQUEST_FILENAME} !-l
+    RewriteCond %{THE_REQUEST} /public/([^\s?]*) [NC]
+    RewriteRule ^ %1 [L,NE,R=302]
 
-    RewriteRule ^(.*)$ public/index.html?url=$1 [QSA]
+    RewriteRule ^((?!public/).*)$ public/$1 [L,NC]
 </IfModule>
